AC_INIT(Makefile.am)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(wlsuite,0.1)
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_CHECK_EXTRA
AC_CHECK_LIB(png,png_get_copyright,,echo "ERROR: libpng library not found"; exit 1;)
AC_CHECK_HEADERS(png.h,,echo "ERROR: png.h not found"; exit 1;)
AC_DEFINE(AUTHOR,"Klaus Reimer",Authors name)
AC_DEFINE(EMAIL,"k@ailis.de",Authors email address)
AC_DEFINE(COPYRIGHT,"Copyright (C) 2007  Klaus Reimer <k@ailis.de>",Copyright message)
AC_OUTPUT(
  Makefile 
  src/Makefile
  src/libwasteland/Makefile
  src/decodepic/Makefile
  src/encodepic/Makefile
)
